# pygroebner

./: .gitignore  LICENSE  README.md  setup.cfg
src/groebner/: __init__.py  base_algebra.py  groebner.py  mymath.py
src/pygroebner/: __init__.py  pygroebner.py
tests/: test.py
