[metadata]
name = pygroebner
version = 0.0.2
author = Weinan Lin
author_email = lwnpku2015@gmail.com
description = A package for groebner basis over prime 2 written implemented in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WayneLin92/pygroebner
project_urls =
    Bug Tracker = https://github.com/WayneLin92/pygroebner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src